# planets

./: .gitattributes  .gitignore  CREDITS.md  Cargo.toml  README.md  activate-smudge-filter.sh  generate-asset-macros.sh  generate-shader-macros.sh  pre-commit.sh
.github/: config.yml
shaders/: particle.frag  particle.vert
src/: assets.rs  audio.rs  main.rs  render.rs  shaders.rs  util.rs  window.rs
src/audio/: mix.rs  mixer.rs  music.rs  sink.rs  source.rs
src/render/: config.rs  queues.rs  setup.rs  shaders.rs
src/window/: input.rs
