[package]
name = "planets"
description = "A space game."
version = "0.1.0"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
edition = "2018"
repository = "https://github.com/milkey-mouse/planets"
readme = "README.md"
license = "GPL-3.0"
categories = ["games"]
keywords = [
    "game",
    "gravity",
    "planets",
    "asteroids",
    "vulkan"
]

[dependencies]
cpal = "0.9.0"
crossbeam-utils = "0.6.5"
hound = "3.4.0"
lewton = "0.9.4"
sample = "0.10.0"
vulkano = "0.13.0"
vulkano-shaders = "0.13.0"
vulkano-win = "0.13.0"
winit = "0.20.0-alpha1"

[patch.crates-io]
vulkano = { git = "https://github.com/milkey-mouse/vulkano.git", branch = "winit-0.20.0-alpha1" }
vulkano-shaders = { git = "https://github.com/milkey-mouse/vulkano.git", branch = "winit-0.20.0-alpha1" }
vulkano-win = { git = "https://github.com/milkey-mouse/vulkano.git", branch = "winit-0.20.0-alpha1" }
